--- a/alelo/index.html
+++ b/alelo/index.html
@@ -503,9 +503,9 @@
                 Delete Your Class</a>
                 <a href="#addclass1" data-toggle="modal" data-target="#addclass1" class="btn-created float-right">Add Students</a>
 
-                <a href="#resent-invitation" data-toggle="modal" data-target="#resent-invitation" class="btn-created btn-red float-right">Resend Invitation(s)</a>
+                <a href="#resent-invitation" data-toggle="modal" data-target="#resent-invitation" class="btn-created btn-red float-right btn-show">Resend Invitation(s)</a>
 
-                <a href="#removestudent" data-toggle="modal" data-target="#removestudent" class="btn-created  btn-red float-right">Remove Student(s)</a>
+                <a href="#removestudent" data-toggle="modal" data-target="#removestudent" class="btn-created  btn-red float-right btn-show">Remove Student(s)</a>
 
               </div>
 
