Add auto size function for textarea

--- a/alelo/index.html
+++ b/alelo/index.html
@@ -185,6 +185,7 @@
   <script src="assets/scripts/bootstrap.min.js"></script>
   <script src="assets/scripts/bootstrap-datepicker.min.js"></script>
   <script src="assets/scripts/jquery.scrollbar.min.js"></script>
+  <script src="assets/scripts/autosize.min.js"></script>
 
   <!-- From assets -->
   <script src="assets/dist/main.js"></script>
