--- a/alelo/index.html
+++ b/alelo/index.html
@@ -176,6 +176,59 @@
     </div>
   </div>
 
+  <!-- Modal-Course Detail -->
+    <div class="modal fade" id="course-detail" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h2 class="modal-title">Ken is Lost <span class="f-n-14 d-inline ml-5">Hover on any title for more information</span></h2>
+
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <table class="table-modal table-modal-custom style-col">
+                <thead>
+                  <tr>
+                    <th scope="col">&nbsp;</th>
+                    <th scope="col">Mastery Score</th>
+                    <th scope="col">Objectives Met</th>
+                    <th scope="col">Turns per Minute</th>
+                    <th scope="col">Hints Used</th>
+                    <th scope="col">Time Spent</th>
+                  </tr>
+                </thead>
+              </table>
+              <table class="table table-striped table-custom style-col">
+                <tbody>
+                  <tr>
+                    <td>Sept. 3, 2020 at 22:57</td>
+                    <td>12%</td>
+                    <td>2/2</td>
+                    <td>3.2</td>
+                    <td>1</td>
+                    <td>15:16</td>
+                  </tr>
+
+                  <tr>
+                    <td>Sept. 3, 2020 at 22:57</td>
+                    <td>12%</td>
+                    <td>2/2</td>
+                    <td>3.2</td>
+                    <td>1</td>
+                    <td>15:16</td>
+                  </tr>
+
+                </tbody>
+              </table>
+              <span class="d-inline float-right f-n-14 mt-1 mr-4 blue-bold"><i class="fa fa-download"></i> Download</span>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
 
 
   <!-- Optional JavaScript -->
