--- a/alelo/assets/index.html
+++ b/alelo/assets/index.html
@@ -7,15 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/styles/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles/bootstrap-datepicker3.standalone.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles/bootstrap-datepicker3.standalone.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-
-  <!-- From assets -->
-  <link rel="stylesheet" href="assets/dist/main.css" rel="stylesheet">
-
   <title>Enskill_3.0_SimServer_InstructorDashboard</title>
 </head>
 
@@ -28,15 +24,12 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="assets/scripts/jquery-3.5.1.min.js"></script>
-  <script src="assets/scripts/popper.min.js"></script>
-  <script src="assets/scripts/bootstrap.min.js"></script>
-  <script src="assets/scripts/bootstrap-datepicker.min.js"></script>
-  <script src="assets/scripts/jquery.scrollbar.min.js"></script>
-  <script src="assets/scripts/autosize.min.js"></script>
-
-  <!-- From assets -->
-  <script src="assets/dist/main.js"></script>
+  <script src="scripts/jquery-3.5.1.min.js"></script>
+  <script src="scripts/popper.min.js"></script>
+  <script src="scripts/bootstrap.min.js"></script>
+  <script src="scripts/bootstrap-datepicker.min.js"></script>
+  <script src="scripts/jquery.scrollbar.min.js"></script>
+  <script src="scripts/autosize.min.js"></script>
 </body>
 
 </html>
