master update 2022 - minor adjusts from Alelo

--- a/alelo/assets/index.html
+++ b/alelo/assets/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <title>Enskill_3.0_SimServer_InstructorDashboard</title>
+  <title>Enskill - Instructor Dashboard</title>
 </head>
 
 <body>
